--- a/source/assets/css/index.css
+++ b/source/assets/css/index.css
@@ -308,7 +308,7 @@ h6::before {
 /* 设置字体 */
 @font-face{
     font-family: 'SmileySans-Oblique';  
-    src: url('../font/SanJiXingKaiJianTi-Cu.ttf') format("truetype");
+    src: url('http://cdn.frankfurtlin.top/blog/SanJiXingKaiJianTi-Cu.ttf') format("truetype");
     /* src: url('../font/JingNanMaiYuanTi.otf') format("opentype"); */
 }
 body {
